--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "str-seg",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "String Segmenter (str-seg) is a module for extracting multiple strings from text in a simple way.",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
